# uc-intg-naim

./: .gitignore  Dockerfile  Dockerfile.txt  README.md  docker-compose.py  docker-entry.sh  driver.json  multi_device_naim_simulator.py  naim_device_discovery.py  naim_simulator.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_naim/: __init__.py  __main__.py  browser.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup_flow.py
