[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-naim"
version = "2.0.7"
description = "Naim Audio integration for Unfolded Circle Remote Two/3"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
keywords = ["naim", "unfolded-circle", "remote", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia"
]
dependencies = [
    "ucapi>=0.5.2dev0",
    "ucapi-framework>=1.9.1",
    "aiohttp>=3.9.0",
    "certifi",
]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-naim"
"Bug Reports" = "https://github.com/mase1981/uc-intg-naim/issues"
"Source" = "https://github.com/mase1981/uc-intg-naim"

[tool.setuptools.packages.find]
include = ["uc_intg_naim*"]

[tool.setuptools.package-data]
uc_intg_naim = ["*.json"]
